# tts_arranger

./: LICENSE  README.md  audio.py  example.py  pyproject.toml  replace.csv  replace_en  requirements.txt  speakers  tts_arranger.py  tts_convert.py  tts_convert_test.py
src/tts_arranger/: __init__.py  example.py  json_processor.py  tts_abstract_writer.py  tts_arranger.py  tts_html_converter.py  tts_processor.py  tts_processor_example.py  tts_simple_writer.py  tts_writer.py  tts_writer_example.py
src/tts_arranger/data/: checkers_default.json  exclude_ids.json  replace  replace.json  replace_de  replace_de.json  replace_en.json
src/tts_arranger/examples/: tts_json_example.py  tts_project_example.py  tts_simple_example.py  tts_writer_example.py
src/tts_arranger/items/: __init__.py  tts_chapter.py  tts_item.py  tts_project.py
src/tts_arranger/tts_reader/: __init__.py  checker.py  tts_abstract_reader.py  tts_docx_reader.py  tts_epub_reader.py  tts_html_based_reader.py  tts_html_reader.py  tts_srt_reader.py  tts_text_reader.py
src/tts_arranger/utils/: audio.py  log.py
tests/: reader_test.py  tts_arranger_test.py
