[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "hatch-requirements-txt"]

[project]
authors = [
  {name = "Andre Jonas", email = "nipsky@gmail.com"},
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
description = "Simplifies arranging text fragments with multiple speakers and processing it with coqui.ai TTS"
dynamic = ["dependencies"]
name = "tts_arranger"
readme = "README.md"
requires-python = ">=3.7"
version = "0.1.4"

[project.urls]
"Bug Tracker" = "https://github.com/knochenhans/tts_arranger/issues"
"Homepage" = "https://github.com/knochenhans/tts_arranger"

[tool.hatch.build]
exclude = [
  ".mypy_cache",
  ".vscode",
]
